@@ -4,4 +4,5 @@ return {
   "lib/LuaPath",
   "io_util.lua",
   "main.lua",
+  "phobos_version.lua",
 }
