@@ -12,8 +12,9 @@ local skip_able = {
   "skip_ensure_main_branch",
   "skip_ensure_clean_working_tree",
   "skip_tests",
-  "skip_build",
   "skip_date_stamp_changelog",
+  "skip_write_phobos_version",
+  "skip_build",
   "skip_cleanup_temp_dir",
   "skip_package",
   "skip_preparation_commit",
@@ -131,22 +132,6 @@ if not args.skip_tests then
   end
 end
 
-if not args.skip_build then
-  -- compile src to `out/src/release`
-  print("Building src")
-  loadfile("scripts/build_src.lua")(table.unpack{
-    "--profile", "release",
-    args.verbose and "--verbose" or nil,
-  })
-
-  -- compile src to `out/factorio/release/phobos`
-  print("Building Factorio Mod")
-  loadfile("scripts/build_factorio_mod.lua")(table.unpack{
-    "--profile", "release",
-    args.verbose and "--verbose" or nil,
-  })
-end
-
 -- get version from info.json
 print("Reading info.json")
 local info_json
@@ -192,6 +177,43 @@ if not args.skip_date_stamp_changelog then
   local file = assert(io.open("changelog.txt", "w"))
   assert(file:write(changelog_util.encode(changelog)))
   assert(file:close())
+end
+
+local function write_phobos_version()
+  if not args.skip_write_phobos_version then
+    print("Writing version "..version_str.." to src/phobos_version.lua")
+    local file = assert(io.open("src/phobos_version.lua", "w"))
+    assert(file:write("\n"
+      .."----------------------------------------------------------------------------------------------------\n"
+      .."-- This file is generated by the publish script\n"
+      .."----------------------------------------------------------------------------------------------------\n"
+      .."return {\n"
+      .."  major = "..version.major..",\n"
+      .."  minor = "..version.minor..",\n"
+      .."  patch = "..version.patch..",\n"
+      .."}\n"
+      ..""
+    ))
+    assert(file:close())
+  end
+end
+
+write_phobos_version()
+
+if not args.skip_build then
+  -- compile src to `out/src/release`
+  print("Building src")
+  loadfile("scripts/build_src.lua")(table.unpack{
+    "--profile", "release",
+    args.verbose and "--verbose" or nil,
+  })
+
+  -- compile src to `out/factorio/release/phobos`
+  print("Building Factorio Mod")
+  loadfile("scripts/build_factorio_mod.lua")(table.unpack{
+    "--profile", "release",
+    args.verbose and "--verbose" or nil,
+  })
 end
 
 -- prepare temp dir
@@ -428,6 +450,8 @@ if not args.skip_increment_version then
     assert(file:write(changelog_util.encode(changelog)))
     assert(file:close())
   end
+
+  write_phobos_version()
 end
 
 -- create commit for moving to new version
