@@ -1,0 +1,9 @@
+
+----------------------------------------------------------------------------------------------------
+-- This file is generated by the publish script
+----------------------------------------------------------------------------------------------------
+return {
+  major = 0,
+  minor = 1,
+  patch = 4,
+}
